--- a/aks-project/terraform/helm/consul-values.yaml
+++ b/aks-project/terraform/helm/consul-values.yaml
@@ -1,5 +1,16 @@
+
 global:
   name: consul
+  datacenter: dc1
+
+server:
+  replicas: 1
+
+ui:
+  enabled: true
+
+connectInject:
+  enabled: true
 
 ui:
   service:
